fix the alignment issue

--- a/index.css
+++ b/index.css
@@ -484,7 +484,7 @@ body {
     padding-bottom: 3rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
     max-width: 50ch;
 }
 
@@ -586,7 +586,7 @@ body {
     }
 
     .destination-meta {
-        --gap: 6rem;
+        --gap: min(5vw, 6rem);
         justify-content: start;
     }
 }
